Image Loading and Parcelizing. Fixed parcelizing data. Fixed sending data between activities. Images appear for establishments and events. Changed Firebase data for image uploading. Changed Firebase call for data retrieval.

--- a/app/src/main/res/layout/activity_owner_event_extra.xml
+++ b/app/src/main/res/layout/activity_owner_event_extra.xml
@@ -21,7 +21,7 @@ tools:context=".OwnerEventExtraActivity">
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/imageview"
+        android:id="@+id/headerImage"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_alignParentStart="true"
@@ -29,7 +29,7 @@ tools:context=".OwnerEventExtraActivity">
         android:layout_alignParentEnd="true"
         android:layout_weight="1"
         android:scaleType="centerCrop"
-        android:src="@drawable/randomprofilepic1"
+        android:src="@drawable/baseline_pictures_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@ tools:context=".OwnerEventExtraActivity">
         android:background="@drawable/rounded_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageview"
+        app:layout_constraintTop_toBottomOf="@+id/headerImage"
         android:layout_marginTop="5dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
