--- a/app/src/main/res/layout/locals_extra.xml
+++ b/app/src/main/res/layout/locals_extra.xml
@@ -19,7 +19,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
-        android:id="@+id/imageview"
+        android:id="@+id/headerImage"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_alignParentStart="true"
@@ -27,7 +27,7 @@
         android:layout_alignParentEnd="true"
         android:layout_weight="1"
         android:scaleType="centerCrop"
-        android:src="@drawable/randomprofilepic1"
+        android:src="@drawable/baseline_pictures_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
         android:background="@drawable/rounded_card"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageview"
+        app:layout_constraintTop_toBottomOf="@+id/headerImage"
         android:layout_marginTop="5dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -236,7 +236,42 @@
             android:id="@+id/localsExtraMapOverlay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
     </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textView_pictures"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/mapViewContainer"
+        android:layout_marginTop="16dp"
+        android:text="Pictures" />
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/photosCard"
+        android:layout_width="390dp"
+        android:layout_height="390dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/rounded_card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_pictures">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/imagesRV"
+                android:layout_width="375dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:listitem="@layout/listing_large_static_image_item" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
