--- a/app/src/main/res/layout/locals_extra.xml
+++ b/app/src/main/res/layout/locals_extra.xml
@@ -172,6 +172,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/see_who_is_going" />
 
+    <Button
+        android:id="@+id/reviewButton"
+        android:layout_width="390dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="LEAVE A REVIEW"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/join_event" />
+
     <TextView
         android:id="@+id/nearbyStaticTextView"
         android:layout_width="380dp"
@@ -180,8 +191,9 @@
         android:textSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/join_event"
+        app:layout_constraintTop_toBottomOf="@id/reviewButton"
         android:layout_marginTop="15dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/nearbyEstablishmentRV"
         android:layout_width="match_parent"
