--- a/app/src/main/res/layout/locals_extra.xml
+++ b/app/src/main/res/layout/locals_extra.xml
@@ -10,7 +10,7 @@
         app:layout_constraintStart_toStartOf="parent">
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <ImageView
         android:id="@+id/headerImage"
         android:layout_width="match_parent"
@@ -156,7 +156,7 @@
         android:id="@+id/join_event"
         android:layout_width="390dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:text="JOIN EVENT"
         android:textColor="@android:color/white"
         style="@style/SlightRoundedCorners"
@@ -174,21 +174,22 @@
         android:text="LEAVE A REVIEW"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/join_event" />
+        app:layout_constraintTop_toBottomOf="@+id/myQrButton" />
 
     <Button
         android:id="@+id/myQrButton"
         style="@style/SlightRoundedCorners"
         android:layout_width="390dp"
         android:layout_height="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="16dp"
         android:backgroundTint="@color/EditEventButton"
         android:text="SEE MY BARCODE"
+        android:visibility="gone"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/see_who_is_going"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toBottomOf="@+id/join_event"
+        />
 
     <TextView
         android:id="@+id/nearbyStaticTextView"
@@ -198,8 +199,8 @@
         android:textSize="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/see_who_is_going"
-        android:layout_marginTop="75dp"/>
+        app:layout_constraintTop_toBottomOf="@+id/reviewButton"
+        android:layout_marginTop="32dp"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/nearbyEstablishmentRV"
         android:layout_width="match_parent"
