--- a/app/src/main/res/layout/activity_check_in.xml
+++ b/app/src/main/res/layout/activity_check_in.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CheckInActivity"
+    tools:context=".activities.CheckInActivity"
     android:background="@color/cardview_dark_background">
 
     <com.google.android.material.card.MaterialCardView
