--- a/app/src/main/res/layout/activity_owner_event_extra.xml
+++ b/app/src/main/res/layout/activity_owner_event_extra.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".OwnerEventExtraActivity">
+tools:context=".activities.OwnerEventExtraActivity">
 
 <!-- ImageView covering 25% of the screen -->
 
