--- a/app/src/main/res/layout/activity_see_attendees.xml
+++ b/app/src/main/res/layout/activity_see_attendees.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SeeAttendeesActivity"
+    tools:context=".activities.SeeAttendeesActivity"
     android:background="@color/cardview_dark_background">
 
     <androidx.recyclerview.widget.RecyclerView
