--- a/app/src/main/res/layout/fragment_profile1.xml
+++ b/app/src/main/res/layout/fragment_profile1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="665dp"
-    tools:context=".ProfileFragment1">
+    tools:context=".fragments.TestAddEventFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
